--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Hey, My name is John Doe</h1>
+        <h1 class="heading-primary">Hey, My name is JimmyBinoculars</h1>
         <div class="home-hero__info">
           <p class="text-primary">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
@@ -191,7 +191,11 @@
               <div class="skills__skill">HTML</div>
               <div class="skills__skill">CSS</div>
               <div class="skills__skill">JavaScript</div>
-              <div class="skills__skill">React</div>
+              <div class="skills__skill">GIT</div>
+              <div class="skills__skill">Github</div>
+              <div class="skills__skill">C#</div>
+              <div class="skills__skill">Unity</div>
+              <!-- <div class="skills__skill">React</div>
               <div class="skills__skill">SASS</div>
               <div class="skills__skill">GIT</div>
               <div class="skills__skill">Shopify</div>
@@ -199,7 +203,7 @@
               <div class="skills__skill">Google ADS</div>
               <div class="skills__skill">Facebook Ads</div>
               <div class="skills__skill">Android</div>
-              <div class="skills__skill">IOS</div>
+              <div class="skills__skill">IOS</div> -->
             </div>
           </div>
         </div>
