--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
           <a href="./#projects" class="btn btn--bg">Projects</a>
         </div>
       </div>
+      
       <div class="home-hero__socials">
+        <!--
         <div class="home-hero__social">
           <a href="#" class="home-hero__social-icon-link">
             <img
@@ -106,8 +108,9 @@
             />
           </a>
         </div>
+        -->
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a href="github.com/JimmyBinoculars" class="home-hero__social-icon-link">
             <img
               src="./assets/png/github-ico.png"
               alt="icon"
@@ -115,6 +118,7 @@
             />
           </a>
         </div>
+        <!--
         <div class="home-hero__social">
           <a href="#" class="home-hero__social-icon-link">
             <img
@@ -145,6 +149,7 @@
             />
           </a>
         </div>
+        -->
       </div>
       <div class="home-hero__mouse-scroll-cont">
         <div class="mouse"></div>
