--- a/index.html
+++ b/index.html
@@ -69,8 +69,11 @@
 					window.location.href = "./main";
 				} 
                 if (input == "help"){
-                    output.innerHTML += "<p>Avaliable commands:</p><p>help  -  This command.</p><p>login  -  Login to the site."
+                    output.innerHTML += "<p>Avaliable commands:</p><p>help  -  This command.</p><p>login  -  Login to the site.</p><p>ls  -  Lists all the files in a directory</p>"
                 }
+				if (input == "ls"){
+					output.innerHTML += "<p>Listing Files...</p><p>|</p><p>|-index.html</p><p>|-main</p>"
+				}
                 else {
 					output.innerHTML += "<p>" + input + ": command not found. Try 'help'.</p>";
 				}
