Trying to fix index.html

--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
                 }
 				if (input == "ls"){
 					output.innerHTML += "<p>Listing Files...</p><p>|</p><p>|-index.html</p><p>|-main</p>"
-				}
-                else {
+				}else {
 					output.innerHTML += "<p>" + input + ": command not found. Try 'help'.</p>";
 				}
 			}
