--- a/index.html
+++ b/index.html
@@ -64,14 +64,13 @@
 				let input = cmd.value.trim().toLowerCase();
 				cmd.value = "";
 
-				elif (input === "login") {
+				if (input === "login") {
 					output.innerHTML += "<p>Login successful.</p>";
 					window.location.href = "./main";
 				} 
-                elif (input == "help"){
+                else if (input == "help"){
                     output.innerHTML += "<p>Avaliable commands:</p><p>help  -  This command.</p><p>login  -  Login to the site.</p><p>ls  -  Lists all the files in a directory</p>"
-                }
-				elif (input == "ls"){
+                }else if (input == "ls"){
 					output.innerHTML += "<p>Listing Files...</p><p>|</p><p>|-index.html</p><p>|-main</p>"
 				}else {
 					output.innerHTML += "<p>" + input + ": command not found. Try 'help'.</p>";
