Tried to make it print what you wrote

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				cmd.value = "";
 
 				if (input === "login") {
-					output.innerHTML += "<p>Login successful.</p>";
+					output.innerHTML += "<p>>>>  "+ input +"</p><p>Login successful.</p>";
 					window.location.href = "./main";
 				} 
                 else if (input == "help"){
